--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,44 @@ header h1 {
     box-shadow: 15px 10px 15px rgba(250,250,250,0.2);
 }
 
+/* GAMEEND MODAL */
+.modal {
+   width: 50%;
+   min-width: 300px;
+   height: 40%;
+   position: fixed;
+   z-index: 10;
+   left: 25%;
+   top: -5000px;
+   background-color: #eee;
+   border: 2px gray solid;
+   margin: 225px auto;
+   border-radius: 10px;
+   text-align: center;
+   font-family: 'PT Sans', sans-serif;
+   font-size: 1.5em;
+   color: #000;
+   transition: top 1.5s;
+}
+
+.modal .playAgainBtn {
+   padding: 10px;
+   font-size: 1.5em;
+   min-width: 150px;
+   border-radius: 10px;
+   cursor: pointer;
+   text-transform: uppercase;
+   letter-spacing: 5px;
+   background-color: #00a1ce;
+   color: #fff;
+   font-weight: bold;
+}
+
+.modal .playAgainBtn:hover {
+   background-color: #fff;
+   color: #00a1ce;
+}
+
 /* FOOTER */
 footer {
    text-align: center;
