Added the li's back in html and css for card class

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,20 @@ header h1 {
     box-shadow: 15px 10px 15px rgba(250,250,250,0.2);
 }
 
+.board .card {
+    width: 125px;
+    height: 125px;
+    background: #474747;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0;
+    box-shadow: 5px 5px 5px rgba(66,66,66, 0.3);
+    cursor: pointer;
+    user-select: none;
+}
+
 /* GAMEEND MODAL */
 .modal {
    width: 50%;
