--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,19 @@ header h1 {
     font-size: 50px;
 }
 
+.board .incorrect {
+    animation-name: shake;
+    animation-duration: 1s;
+    transition: transform 1s;
+    background-color: #e20000 !important;
+ }
+
+.board .correct {
+    transform: rotate(360deg) scale(1.3);
+    transition: transform 1s;
+    background-color: #00e22d !important;
+}
+
 /* GAMEEND MODAL */
 .modal {
    width: 50%;
@@ -173,4 +186,12 @@ footer {
 
 .hearts {
    color: red;
+}
+
+/* ANIMATION FOR .incorrect CLASS */
+@keyframes shake {
+    0% {transform: rotate(0);}
+    33% {transform: rotate(-25deg);}
+    66% {transform: rotate(25deg);}
+    100% {transform: rotate(0);}
 }
