--- a/css/style.css
+++ b/css/style.css
@@ -126,27 +126,43 @@ header h1 {
 
 /* GAMEEND MODAL */
 .modal {
-   width: 50%;
-   min-width: 300px;
-   height: 40%;
-   position: fixed;
-   z-index: 10;
-   left: 25%;
-   top: -5000px;
-   background-color: #eee;
-   border: 2px gray solid;
-   margin: 225px auto;
-   border-radius: 10px;
-   text-align: center;
-   font-family: 'PT Sans', sans-serif;
-   font-size: 1.5em;
-   color: #000;
-   transition: top 1.5s;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 1s linear 1s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-contents {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 1rem 1.5 rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+    color: black;
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.2em;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 1s linear 1s, opacity 0.25 0s, transform 0.25s;
 }
 
 .modal .playAgainBtn {
    padding: 10px;
-   font-size: 1.5em;
+   font-size: 1em;
    min-width: 150px;
    border-radius: 10px;
    cursor: pointer;
@@ -155,6 +171,7 @@ header h1 {
    background-color: #00a1ce;
    color: #fff;
    font-weight: bold;
+   margin-bottom: 30px;
 }
 
 .modal .playAgainBtn:hover {
