--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,14 @@ header h1 {
 
 .board .incorrect {
     animation-name: shake;
-    animation-duration: 1s;
-    transition: transform 1s;
+    animation-duration: 0.5s;
+    transition: all 0.5s;
     background-color: #e20000 !important;
  }
 
 .board .correct {
-    transform: rotate(360deg) scale(1.3);
-    transition: transform 1s;
+    transform: rotate(360deg);
+    transition: all 0.5s;
     background-color: #00e22d !important;
 }
 
@@ -207,8 +207,10 @@ footer {
 
 /* ANIMATION FOR .incorrect CLASS */
 @keyframes shake {
-    0% {transform: rotate(0);}
-    33% {transform: rotate(-25deg);}
-    66% {transform: rotate(25deg);}
-    100% {transform: rotate(0);}
+    0% {transform: translateX(0);}
+    20% {transform: translateX(-20px);}
+    40% {transform: translateX(20px);}
+    60% {transform: translateX(-20px);}
+    80% {transform: translateX(20px);}
+    100% {transform: translateX(0);}
 }
