--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 0;
+    padding: 0 0 150px 0;
+    position: relative;
 }
 
 body {
@@ -32,19 +33,19 @@ body {
 
 /* HEADER */
 header {
-    width: 660px;
+    width: 100%;
     min-width: 360px;
     margin: 20px auto;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 header h1 {
     margin: 20px auto 40px auto;
     border-bottom: 3px solid #fff;
-    width: 600px;
+    width: 90%;
     text-align: center;
-    letter-spacing: 8px;
+    letter-spacing: 16px;
 }
 
 /* SCORECARD */
@@ -70,9 +71,9 @@ header h1 {
 
 /* BOARD AND CARDS */
 .board {
-    width: 660px;
-    min-height: 680px;
-    min-width: 360px;
+    width: 90%;
+    min-width: 800px;
+    height: 900px;
     background: linear-gradient(#a3ebff, #9e6bff);
     margin: 30px auto;
     list-style: none;
@@ -86,8 +87,8 @@ header h1 {
 }
 
 .board .card {
-    width: 125px;
-    height: 125px;
+    width: 175px;
+    height: 175px;
     background: #474747;
     border-radius: 20px;
     display: flex;
@@ -101,7 +102,7 @@ header h1 {
 
 .board .open {
     background: #ddd;
-    font-size: 50px;
+    font-size: 70px;
     color: #000;
 }
 
@@ -185,6 +186,7 @@ footer {
    color: black;
    padding: 10px;
    width: 100%;
+   height: 150px;
    background-color: white;
    font-family: 'Helvetica Neue', serif;
    margin-top: 2em;
@@ -213,4 +215,34 @@ footer {
     60% {transform: translateX(-20px);}
     80% {transform: translateX(20px);}
     100% {transform: translateX(0);}
+}
+
+@media (min-width: 1000px) {
+    header {
+        width: 660px;
+        font-size: 1.5em;
+    }
+
+    header h1 {
+        width: 600px;
+        letter-spacing: 8px;
+    }
+
+    .board {
+        width: 660px;
+        height: 660px;
+        max-height: 660px;
+        min-width: 660px;
+    }
+
+    .board .card {
+        min-width: 125px;
+        min-height: 125px;
+        max-width: 130px;
+        max-height: 130px;
+    }
+
+    .board .open {
+        font-size: 50px;
+    }
 }
