--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 0 0 150px 0;
-    position: relative;
+    padding: 0;
 }
 
 body {
@@ -29,6 +28,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: calc(100vh - 150px);
 }
 
 /* HEADER */
@@ -53,6 +53,7 @@ header h1 {
     display: flex;
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
+    font-size: 1.5em;
 }
 
 .scorecard p {
@@ -194,13 +195,13 @@ footer {
 
 .social,
 .social a {
-   font-size: 35px;
+   font-size: 1.8em;
    color: #bbb;
 }
 
 .fa-twitter, .fa-envelope {
    padding: 5px 10px;
-   margin: 0 5px;
+   margin: 0 25px 10px 25px;
 }
 
 .hearts {
@@ -244,5 +245,18 @@ footer {
 
     .board .open {
         font-size: 60px;
+    }
+
+    .board .match {
+        font-size: 60px;
+    }
+
+    footer {
+        height: auto;
+    }
+
+    .social,
+    .social a {
+       font-size: 35px;
     }
 }
