Updated board gradient colors

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ header h1 {
     width: 90%;
     min-width: 800px;
     height: 900px;
-    background: linear-gradient(#a3ebff, #9e6bff);
+    background: linear-gradient(#6aff81, #69dcff);
     margin: 30px auto;
     list-style: none;
     border-radius: 10px;
