--- a/css/style.css
+++ b/css/style.css
@@ -28,24 +28,23 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: calc(100vh - 150px);
 }
 
 /* HEADER */
 header {
-    width: 100%;
+    width: 660px;
     min-width: 360px;
     margin: 20px auto;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 header h1 {
     margin: 20px auto 40px auto;
     border-bottom: 3px solid #fff;
-    width: 90%;
+    width: 600px;
     text-align: center;
-    letter-spacing: 16px;
+    letter-spacing: 8px;
 }
 
 /* SCORECARD */
@@ -53,7 +52,6 @@ header h1 {
     display: flex;
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.5em;
 }
 
 .scorecard p {
@@ -72,10 +70,10 @@ header h1 {
 
 /* BOARD AND CARDS */
 .board {
-    width: 90%;
-    min-width: 800px;
-    height: 900px;
-    background: linear-gradient(#6aff81, #69dcff);
+    width: 660px;
+    min-height: 680px;
+    min-width: 360px;
+    background: linear-gradient(#a3ebff, #9e6bff);
     margin: 30px auto;
     list-style: none;
     border-radius: 10px;
@@ -88,8 +86,8 @@ header h1 {
 }
 
 .board .card {
-    width: 175px;
-    height: 175px;
+    width: 125px;
+    height: 125px;
     background: #474747;
     border-radius: 20px;
     display: flex;
@@ -103,14 +101,14 @@ header h1 {
 
 .board .open {
     background: #ddd;
-    font-size: 80px;
+    font-size: 50px;
     color: #000;
 }
 
 .board .match {
     background: #00ff00;
     cursor: default;
-    font-size: 80px;
+    font-size: 50px;
 }
 
 .board .incorrect {
@@ -187,7 +185,6 @@ footer {
    color: black;
    padding: 10px;
    width: 100%;
-   height: 150px;
    background-color: white;
    font-family: 'Helvetica Neue', serif;
    margin-top: 2em;
@@ -195,13 +192,13 @@ footer {
 
 .social,
 .social a {
-   font-size: 1.8em;
+   font-size: 35px;
    color: #bbb;
 }
 
 .fa-twitter, .fa-envelope {
    padding: 5px 10px;
-   margin: 0 25px 10px 25px;
+   margin: 0 5px;
 }
 
 .hearts {
@@ -216,47 +213,4 @@ footer {
     60% {transform: translateX(-20px);}
     80% {transform: translateX(20px);}
     100% {transform: translateX(0);}
-}
-
-@media (min-width: 1000px) {
-    header {
-        width: 660px;
-        font-size: 1.5em;
-    }
-
-    header h1 {
-        width: 600px;
-        letter-spacing: 8px;
-    }
-
-    .board {
-        width: 660px;
-        height: 660px;
-        max-height: 660px;
-        min-width: 660px;
-    }
-
-    .board .card {
-        min-width: 125px;
-        min-height: 125px;
-        max-width: 130px;
-        max-height: 130px;
-    }
-
-    .board .open {
-        font-size: 60px;
-    }
-
-    .board .match {
-        font-size: 60px;
-    }
-
-    footer {
-        height: auto;
-    }
-
-    .social,
-    .social a {
-       font-size: 35px;
-    }
 }
