Updated board gradient colors

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ header h1 {
     width: 660px;
     min-height: 680px;
     min-width: 360px;
-    background: linear-gradient(#a3ebff, #9e6bff);
+    background: linear-gradient(#41f4c1, #3da4ed);
     margin: 30px auto;
     list-style: none;
     border-radius: 10px;
