--- a/style.css
+++ b/style.css
@@ -148,10 +148,9 @@ header h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  padding: 1rem 1.5 rem;
-  width: 24rem;
+  padding: 1rem 4rem;
   border-radius: 0.5rem;
-  color: black;
+  color: #333;
   text-align: center;
   font-family: 'PT Sans', sans-serif;
   font-size: 1.2em;
@@ -165,22 +164,22 @@ header h1 {
 }
 
 .modal .playAgainBtn {
-  padding: 10px;
+  padding: 10px 20px;
   font-size: 1em;
-  min-width: 150px;
   border-radius: 10px;
   cursor: pointer;
   text-transform: uppercase;
-  letter-spacing: 5px;
-  background-color: #00a1ce;
-  color: #fff;
+  letter-spacing: 2px;
+  color: #00a1ce;
   font-weight: bold;
   margin-bottom: 30px;
+  outline: none;
+  border: 1px solid #00a1ce;
 }
 
 .modal .playAgainBtn:hover {
-  background-color: #fff;
-  color: #00a1ce;
+  color: #fff;
+  background-color: #00a1ce;
 }
 
 /* FOOTER */
